# outlook-folder-sync-tool

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/: outlook_folder_export_csv.py  outlook_folder_import.py
